Resizing from URL and URI