@@ -2,6 +2,7 @@ package com.mfvanek.image.resizing;
 
 import com.mfvanek.image.resizing.enums.ResizeType;
 import com.mfvanek.image.resizing.interfaces.ImageResizer;
+import com.mfvanek.image.resizing.pojos.ResizeParams;
 import com.mfvanek.image.resizing.resizers.ResizersFactory;
 import com.mfvanek.image.resizing.utils.ParamsValidator;
 import org.slf4j.Logger;
@@ -14,6 +15,7 @@ import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Arrays;
 
 /**
  * TODO Consider to use any third party library https://www.baeldung.com/java-images
@@ -27,23 +29,34 @@ public class DemoApp {
         System.out.println("Hi there! This is demo application for image resizing");
 
         try {
+            System.out.println("Supported formats:");
+            Arrays.stream(ImageIO.getWriterFormatNames()).forEach(System.out::println);
+
             tmpDir = Files.createTempDirectory("resized_images_");
-            final ResizeParams resizeParams = ParamsValidator.getInstance(args).useDefault().withAlgorithm(ResizeType.KEEP_ASPECT_RATIO).validate();
+            ResizeParams resizeParams = ParamsValidator.getInstance(args).
+                    useDefault().
+                    withAlgorithm(ResizeType.KEEP_ASPECT_RATIO).
+                    withPath("https://static.ngs.ru/news/99/preview/e88eba0dbd5cd0e30ee349a3a3c54dbd07d2b28f_712.jpg").
+                    validate();
+            processURI(resizeParams);
 
-            URI netUri = new URI("https://pp.userapi.com/c850132/v850132760/891c6/pI8_VnB8fKw.jpg");
-            processURI(netUri, resizeParams);
-
-            URI localUri = new URI(resizeParams.getPathToFile());
-            processURI(localUri, resizeParams);
+            resizeParams = ParamsValidator.getInstance(args).useDefault().withAlgorithm(ResizeType.KEEP_ASPECT_RATIO).validate();
+            processURI(resizeParams);
 
         } catch (Exception e) {
             logger.error(e.getMessage(), e);
         }
     }
 
-    private static void processURI(final URI uri, final ResizeParams resizeParams) {
+    private static void processURI(final ResizeParams resizeParams) {
         try {
-            BufferedImage img = resizeParams.isUrl() ? ImageIO.read(new URL(resizeParams.getPathToFile())) : ImageIO.read(new File(uri));
+            BufferedImage img;
+            if (resizeParams.isUrl()) {
+                img = ImageIO.read(new URL(resizeParams.getPathToFile()));
+            } else {
+                File file = new File(new URI(resizeParams.getPathToFile()));
+                img = ImageIO.read(file);
+            }
 
             if (img != null) {
                 final ImageResizer imageResizer = ResizersFactory.create(resizeParams.getAlgorithm());
